@@ -5,8 +5,10 @@ import cc.hachem.core.SpawnerCluster;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.font.TextRenderer;
 import net.minecraft.client.gui.DrawContext;
+import net.minecraft.text.Text;
 import net.minecraft.util.Colors;
 import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.Formatting;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -31,24 +33,35 @@ public class ClusterListItemWidget extends Widget
         this.width = width;
         this.height = textRenderer.fontHeight + 5;
 
-        expandButton = new ButtonWidget(x, y, ">", Colors.WHITE, this::toggleExpanded);
+        expandButton = new ButtonWidget(x, y, Text.translatable("button.spawn_radar.expand").getString(), Colors.WHITE, this::toggleExpanded);
 
-        clusterButton = new ButtonWidget(x + expandButton.getWidth() + 5, y,
-            String.format("[(%d) Cluster #%d]", cluster.spawners().size(), cluster.id()),
+        clusterButton = new ButtonWidget(
+            x + expandButton.getWidth() + 5,
+            y,
+            Text.translatable("button.spawn_radar.cluster_label", cluster.spawners().size(), cluster.id()).getString(),
             Colors.LIGHT_GRAY,
             () -> ClusterManager.toggleHighlightCluster(cluster.id())
         );
 
         for (BlockPos pos : cluster.spawners())
         {
-            String label = String.format("- Spawners @ [%d, %d, %d]", pos.getX(), pos.getY(), pos.getZ());
-            children.add(new ButtonWidget(x + 10, y, label, Colors.ALTERNATE_WHITE, () ->
-            {
-                if (client.player != null)
-                    client.player.networkHandler.sendChatCommand(
-                        String.format("tp %d %d %d", pos.getX(), pos.getY(), pos.getZ())
-                    );
-            }));
+            String label = Text.translatable(
+                "button.spawn_radar.spawner_label",
+                pos.getX(), pos.getY(), pos.getZ()
+            ).getString();
+
+            children.add(new ButtonWidget(
+                x + 10,
+                y,
+                label,
+                Colors.ALTERNATE_WHITE,
+                () -> {
+                    if (client.player != null)
+                        client.player.networkHandler.sendChatCommand(
+                            String.format("tp %d %d %d", pos.getX(), pos.getY(), pos.getZ())
+                        );
+                }
+            ));
         }
     }
 
@@ -77,21 +90,20 @@ public class ClusterListItemWidget extends Widget
     @Override
     public void render(DrawContext context)
     {
-        expandButton.setText(expanded ? "v" : ">");
+        expandButton.setText(Text.translatable(expanded ? "button.spawn_radar.collapse" : "button.spawn_radar.expand").getString());
         expandButton.setX(x);
         expandButton.setY(y);
         expandButton.render(context);
 
         clusterButton.setX(x + expandButton.getWidth() + 5);
         clusterButton.setY(y);
-        clusterButton.setText(String.format("[(%d) Cluster #%d]", cluster.spawners().size(), cluster.id()));
+        clusterButton.setText(Text.translatable("button.spawn_radar.cluster_label", cluster.spawners().size(), cluster.id()).getString());
         clusterButton.setColor(ClusterManager.isHighlighted(cluster.id()) ? Colors.WHITE : Colors.LIGHT_GRAY);
         clusterButton.render(context);
 
         if (expanded)
         {
             int childY = y + expandButton.getHeight() + 2;
-
             for (ButtonWidget child : children)
             {
                 child.setX(x + expandButton.getWidth() + 10);
@@ -105,9 +117,8 @@ public class ClusterListItemWidget extends Widget
     @Override
     public int getHeight()
     {
-        if (!expanded)
-            return expandButton.getHeight();
-        return expandButton.getHeight() + children.size() * (children.getFirst().getHeight() + 2);
+        if (!expanded) return expandButton.getHeight();
+        return expandButton.getHeight() + children.size() * (children.get(0).getHeight() + 2);
     }
 
     private void toggleExpanded()
